# discord_bot

./: .env  .gitignore  README.md  discord_slack_bot.py  pyproject.toml
